[nrf noup] crypto: Have CRYPTO_HW_ACCELERATOR support nrf_security
Adjust CRYPTO_HW_ACCELERATOR build scripts to also support
nrf_security.

Signed-off-by: Sebastian Bøe <sebastian.boe@nordicsemi.no>

--- a/platform/ext/accelerator/CMakeLists.txt
+++ b/platform/ext/accelerator/CMakeLists.txt
@@ -7,6 +7,9 @@
 
 cmake_policy(SET CMP0079 NEW)
 
+# When using nrf_security we don't need these build scripts
+return()
+
 if(BL2)
     add_library(bl2_crypto_hw STATIC)
 endif()
