panic: Introduce option for halting instead of rebooting on panic
Introduce the option to halt instead of reboot to retain the backtrace
that triggered the fault and thereby make it easier to debug. Should
not be used in production however.

In addition to retaining the backtrace it is also easier to debug a
program that has halted than one that infinitely reboots.

Signed-off-by: Sebastian Bøe <sebastian.boe@nordicsemi.no>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -116,6 +116,7 @@ target_compile_definitions(tfm_spm
         $<$<CONFIG:Debug>:TFM_CORE_DEBUG>
         $<$<AND:$<BOOL:${BL2}>,$<BOOL:${MCUBOOT_MEASURED_BOOT}>>:BOOT_DATA_AVAILABLE>
         $<$<BOOL:${TFM_EXCEPTION_INFO_DUMP}>:TFM_EXCEPTION_INFO_DUMP>
+        $<$<BOOL:${TFM_HALT_ON_CORE_PANIC}>:TFM_HALT_ON_CORE_PANIC>
         $<$<BOOL:${TFM_NS_MANAGE_NSID}>:TFM_NS_MANAGE_NSID>
         CONFIG_TFM_SPE_FP=${CONFIG_TFM_SPE_FP}
 )
